<resources>
    <string name="app_name">DMS Plus</string>
    <string name="app_company_name">Viettel ICT</string>
    <string name="login_activity_edt_user">Account</string>
    <string name="login_activity_edt_pass">Password</string>
    <string name="login_activity_btn_login">LOGIN</string>
    <string name="navigation_drawer_open">Open menu</string>
    <string name="navigation_drawer_close">Close menu</string>
    <string name="navigation_drawer_dashboard">Homepage</string>
    <string name="navigation_drawer_item_customer_register">Customer Registration</string>
    <string name="navigation_drawer_item_promotion">Promotions</string>
    <string name="navigation_drawer_item_product">List of Products</string>
    <string name="navigation_drawer_item_result_sale">Sales Results</string>
    <string name="navigation_drawer_item_criteria_sale">Sales target</string>
    <string name="navigation_drawer_item_my_customer">My Customers</string>
    <string name="navigation_drawer_header_support_sale">Supporting Information</string>
    <string name="navigation_drawer_item_promotion_program">Promotions</string>
    <string name="navigation_drawer_item_list_product">Products</string>
    <string name="navigation_drawer_item_list_order">List of Purchase Orders</string>
    <string name="navigation_drawer_item_new_customer">New Customer</string>
    <string name="navigation_drawer_header_system">System</string>
    <string name="navigation_drawer_item_change_pass">Change Password</string>
    <string name="navigation_drawer_item_settings">Settings</string>
    <string name="navigation_drawer_item_exit">Log Off</string>
    <string name="navigation_drawer_item_visit">Visit Customer</string>
    <string name="navigation_drawer_item_take_order">Make new order</string>
    <string name="navigation_drawer_item_return">Return product</string>
    <string name="navigation_drawer_item_exchange">Exchange product</string>
    <string name="coming_soon_feature">The function has been under construction, we will update to you later</string>
    <string name="error">Error</string>
    <string name="error_connect">Connection error. Please, try again!</string>
    <string name="error_connect_server">An error just occurred while connecting to server.</string>
    <string name="error_no_network">An error just happened in connecting to Internet. Please check network connection and try it again!</string>
    <string name="error_network_turned_off">Your Internet connection is not enabled. Do you want to turn it on?</string>
    <string name="error_location_service_turn_off">Your location services is not enabled. Do you want to turn it on?</string>
    <string name="error_unknown">Unknown error. Please try again later.</string>
    <string name="error_not_have_cammera_app">Camera software is not available.</string>
    <string name="error_internal_server">Error occurred on the server.</string>
    <string name="error_bad_request">Request submitted invalid. \ nError Type: {0} \ n Notification: {1}</string>
    <string name="warning">Warning</string>
    <string name="notify">Notification</string>
    <string name="error_saving_photo">Can not save this photo.</string>
    <string name="message_please_wait">Please wait</string>
    <string name="message_loading_data">Loading data</string>
    <string name="message_new_data">Please wait</string>
    <string name="message_update_data">Updating data</string>
    <string name="error_invalid_param">Request was failed to perform. Please double check your data and try again!</string>
    <string name="error_user_not_found">User was not found. Please double check your data and try again!</string>
    <string name="error_product_not_found">Product was not found. Please double check your data and try again!</string>
    <string name="error_area_not_found">The requested area was not found. Please double check your data and try again!</string>
    <string name="error_customer_type_not_found">The requested type of customer was not found. Please double check your data and try again!</string>
    <string name="error_customer_not_found">The requested customer was not found. Please double check your data and try again!</string>
    <string name="unknow">Unknow</string>
    <string name="login_btn">LOGIN</string>
    <string name="login_hint_user">Account</string>
    <string name="login_hint_email">Email</string>
    <string name="login_hint_pass">Password</string>
    <string name="login_retry_login">Retry</string>
    <string name="login_setting_server">Configuration</string>
    <string name="login_error_email">Invalid Account</string>
    <string name="login_error_pass">Invalid Password</string>
    <string name="login_error_invalid_credential">Login information is incorrect. Please try again.</string>
    <string name="login_error_expired">Login session has been expired.</string>
    <string name="login_error_will_be_logout">You are about to be logged off.</string>
    <string name="confirm_yes">Agree</string>
    <string name="confirm_no">No</string>
    <string name="confirm_ok">Agree</string>
    <string name="confirm_close">Close</string>
    <string name="confirm_cancel">Cancel</string>
    <string name="confirm_continue">Continue</string>
    <string name="confirm_retry">Retry</string>
    <string name="confirm_confirm">Confirm</string>
    <string name="confirm_set_time">Set</string>
    <string name="confirm_cancel_time">Cancel</string>
    <string name="setting_server_title">Select a server</string>
    <string name="setting_server_save">Save</string>
    <string name="setting_server_cancel">Cancel</string>
    <string name="symbol_percentage">%</string>
    <string name="symbol_slash">/</string>
    <string name="symbol_parentheses_left">(</string>
    <string name="symbol_parentheses_right">)</string>
    <string name="symbol_dashes">-</string>
    <string name="status_visit_visiting">Visiting</string>
    <string name="status_visit_visited">Visited</string>
    <string name="status_visit_not_visited">Ready</string>
    <string name="status_order_waiting">Pending</string>
    <string name="status_order_accepted">Approved</string>
    <string name="status_order_rejected">Refused</string>
    <string name="status_survey_not_completed">Ready</string>
    <string name="status_survey_completed">Done</string>
    <string name="status_survey_completing">On progress</string>
    <string name="home_page_title">Homepage</string>
    <string name="home_page_revenue">SALES</string>
    <string name="home_page_productivity">PRODUCTIVITY</string>
    <string name="home_page_sales_days">SALES DAY</string>
    <string name="home_page_visit">VISITS</string>
    <string name="home_page_target">Sales target</string>
    <string name="home_page_view_detail">DETAILS</string>
    <string name="sales_detail_revenue_title">Sales Detail</string>
    <string name="sales_detail_productivity_title">Productivity Details</string>
    <string name="sales_detail_no_result">No any order created in this month</string>
    <string name="sales_detail_loading">Loading…</string>
    <string name="sales_detail_customer_info">Customer Information</string>
    <string name="sales_detail_sale_result">Sales</string>
    <string name="sales_daily_summary_title">Sales result by day</string>
    <string name="sales_daily_revenue">Sales</string>
    <string name="sales_daily_productivity">Productivity</string>
    <string name="sales_daily_order">Purchase order</string>
    <string name="sales_daily_days">Date of business</string>
    <string name="action_search">Search</string>
    <string name="customer_list_no_planned_customer">There is not any customer planned to visit today.</string>
    <string name="customer_info_title">Customer Information</string>
    <string-array name="general_info_tabs_title_mb">
        <item>GENERAL</item>
        <item>STATISTIC</item>
        <item>LOCATION</item>
    </string-array>
    <string-array name="general_info_tabs_title_tb">
        <item>GENERAL</item>
        <item>LOCATION</item>
    </string-array>
    <string-array name="sale_type">
        <item>Pre-Sale</item>
        <item>Van-Sale</item>
    </string-array>
    <string name="customer_info_perform_call_message">Call phone</string>
    <string name="customer_info_perform_call_tittle">Make a call</string>
    <string name="customer_info_update_mobile_successful">Update successful mobile number</string>
    <string name="customer_info_update_mobile_unsuccessful">There is an error happened while updating customer\'s mobile number.</string>
    <string name="customer_info_update_home_successful">Update successful phone number</string>
    <string name="customer_info_update_home_unsuccessful">There is an error happened while updating customer\'s phone number.</string>
    <string name="customer_info_update_location_successful">Update successful location</string>
    <string name="customer_info_update_location_unsuccessful">There is an error happened while updating customer\'s location.</string>
    <string name="customer_info_update_location_unchange">There is no any change in the customer\'s  location.</string>
    <string name="customer_info_cardview_outstanding_1">Productivity in last month</string>
    <string name="customer_info_cardview_outstanding_2">Productivity in current month</string>
    <string name="customer_info_cardview_outstanding_3">Purchase order in current month</string>
    <string name="customer_info_recent_revenue_subtitle">Sales in %1$d most recent month(s)</string>
    <string name="customer_info_recent_order_subtitle">List of %1$d most recent purchase order(s)</string>
    <string name="customer_info_recent_order_table_1">Date</string>
    <string name="customer_info_recent_order_table_2">SKU</string>
    <string name="customer_info_recent_order_table_3">Value</string>
    <string name="customer_visit_view_detail">DETAILS</string>
    <string name="customer_visit_view_close">CLOSE</string>
    <string name="customer_visit_menu_finish_visit">End of visit</string>
    <string name="customer_visit_content_start_begin_visit">START VISIT</string>
    <string name="customer_visit_actions_take_photo">Take photo</string>
    <string name="customer_visit_actions_view_photo">View photo</string>
    <string name="customer_visit_actions_no_photo">No photo</string>
    <string name="customer_visit_actions_view_close_visit_photo">View closed store photo</string>
    <string name="customer_visit_actions_send_customer_feedback">Feedback</string>
    <string name="customer_visit_actions_take_order">Purchase</string>
    <string name="visit_survey_list_header_1">Program</string>
    <string name="visit_survey_list_header_2">Duration</string>
    <string name="visit_survey_list_header_3">No of questions</string>
    <string name="visit_survey_list_header_4">Status</string>
    <string name="order_customer_header_time">Time</string>
    <string name="order_customer_header_customer">Customer</string>
    <string name="order_customer_header_total">Total</string>
    <string name="register_customer_customer_type">Customer type</string>
    <string name="register_customer_customer_area">District</string>
    <string name="register_customer_customer_name">Customer name</string>
    <string name="register_customer_address">Address</string>
    <string name="register_customer_mobile_phone">Mobile number</string>
    <string name="register_customer_home_phone">Phone number</string>
    <string name="register_customer_email">Email</string>
    <string name="register_customer_representative">Representative</string>
    <string name="register_customer_note">Note</string>
    <string name="register_customer_list_header_0">Customer Information</string>
    <string name="register_customer_list_header_1">Phone</string>
    <string name="register_customer_list_header_2">Registration date</string>
    <string name="register_customer_list_header_3">Status</string>
</resources>