<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="104dp"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <LinearLayout
        android:layout_marginRight="72dp"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:gravity="center"
        android:orientation="horizontal">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/register_customer_list_header_0"
            android:singleLine="true"
            android:gravity="center_horizontal|left"
            android:ellipsize="end"
            android:textAppearance="@style/TextAppearance.Medium.14.Black54" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal|left"
            android:text="@string/register_customer_list_header_1"
            android:singleLine="true"
            android:ellipsize="end"
            android:textAppearance="@style/TextAppearance.Medium.14.Black54"
            android:visibility="visible" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal|right"
            android:text="@string/register_customer_list_header_2"
            android:singleLine="true"
            android:ellipsize="end"
            android:textAppearance="@style/TextAppearance.Medium.14.Black54"
            android:visibility="visible" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal|right"
            android:text="@string/register_customer_list_header_3"
            android:singleLine="true"
            android:ellipsize="end"
            android:textAppearance="@style/TextAppearance.Medium.14.Black54" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e0e0e0"></View>

</LinearLayout>