<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.viettel.dms.ui.fragment.SalesMonthlySummaryTBFragment">

    <com.viettel.dms.helper.layout.GeneralSwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="104dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginRight="80dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:paddingRight="24dp"
                        android:text="@string/sales_daily_days"
                        android:textAppearance="@style/TextAppearance.Regular.14.Black54" />
                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:gravity="center_vertical|right"
                        android:maxLines="1"
                        android:text="@string/sales_daily_order"
                        android:textAppearance="@style/TextAppearance.Regular.14.Black54" />

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:gravity="end|center_vertical"
                        android:maxLines="1"
                        android:text="@string/sales_daily_productivity"
                        android:textAppearance="@style/TextAppearance.Regular.14.Black54"
                         />

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:gravity="end|center_vertical"
                        android:maxLines="1"
                        android:text="@string/sales_daily_revenue"
                        android:textAppearance="@style/TextAppearance.Regular.14.Black54" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#e0e0e0" />

            </LinearLayout>

            <com.idunnololz.widgets.AnimatedExpandableListView
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:divider="@null"
                android:groupIndicator="@null" />

        </LinearLayout>

    </com.viettel.dms.helper.layout.GeneralSwipeRefreshLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/drawer_shadow_top"></View>
</RelativeLayout>

